--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
+    "ts-node": "^10.4.0",
     "typeorm": "^0.2.37",
     "uuid": "^8.3.2"
   },
