--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "ts-node": "^10.4.0",
+    "tsc": "^2.0.3",
     "typeorm": "^0.2.37",
     "uuid": "^8.3.2"
   },
