chore: adjust to deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mas-backend",
+  "name": "mas-backend-senai",
   "version": "1.0.0",
   "description": "api for application",
   "main": "server.js",
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "postinstall": "node tsc",
+    "postinstall": "tsc",
     "start": "node dist/server.js",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "typeorm-production": "ts-node --transpile-only ./node_modules/typeorm/cli.js"
