--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1",
+    "pg": "^8.5.1",
     "ts-node": "^10.4.0",
     "tsc": "^2.0.3",
-    "typeorm": "^0.2.37",
+    "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
